# findicator

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: ci.yml  publish.yml  test-and-publish.yml
src/findicator/: __init__.py
tests/: test_atr.py  test_bollinger.py  test_elder_ray.py  test_ema_channel.py  test_force_index.py  test_impulse_system.py  test_macd.py  test_rsi.py  test_stochastic.py
