[tool.poetry]
name = "findicator"
version = "0.1.0"
description = "A Python library for financial indicators."
authors = ["Your Name <your@email.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "findicator", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
numpy = "^1.25.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
tox = "^4.0"
coverage = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
