[metadata]
name = findicator
version = 0.1.0
author = Your Name
author_email = your@email.com
description = A Python library for financial indicators.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/findicator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas

[options.packages.find]
where = src

[coverage:run]
branch = True
